@@ -40,7 +40,7 @@ public class SimState implements java.io.Serializable
     // Lock for accessing the HashSet
     Object asynchronousLock = new boolean[1];  // an array is a unique, serializable object
     // Are we cleaning house and replacing the HashSet?
-    public boolean cleaningAsynchronous = false;
+    boolean cleaningAsynchronous = false;
         
     SimState(long seed, MersenneTwisterFast random, Schedule schedule)
         {
@@ -90,20 +90,27 @@ public class SimState implements java.io.Serializable
         this.seed = seed;
         }
                 
-    /* @deprecated use setSeed */
-    /*
-      public void setRandom(MersenneTwisterFast random)
-      {
-      this.random = random;
-      }
-    */
-    
+    /** Primes the generator.  Mersenne Twister seeds its first 624 numbers using a basic
+        linear congruential generator; thereafter it uses the MersenneTwister algorithm to
+        build new seeds.  Those first 624 numbers are generally just fine, but to be extra
+        safe, you can prime the generator by calling nextInt() on it some (N>1) * 624 times.
+        This method does exactly that, presently with N=2 ( + 1 ). */
+    public static MersenneTwisterFast primeGenerator(MersenneTwisterFast generator)
+        {
+        // 624 = MersenneTwisterFast.N  which is private duh
+        for(int i = 0; i < 624 * 2 + 1; i++)
+            generator.nextInt();
+        return generator;
+        }
+
     /** Called immediately prior to starting the simulation, or in-between
         simulation runs.  This gives you a chance to set up initially,
         or reset from the last simulation run. The default version simply
         replaces the Schedule with a completely new one.  */
     public void start()
         {
+        // prime the generator so it's got better statistial properties
+        random = primeGenerator(random);
         // just in case
         cleanupAsynchronous();
         // reset schedule
@@ -220,7 +227,7 @@ public class SimState implements java.io.Serializable
         {
         AsynchronousSteppable[] b = asynchronousRegistry();
         final int len = b.length;
-        for(int x=0;x<len;x++) b[x].resume();
+        for(int x=0;x<len;x++) b[x].resume(false);
         }
 
     /** Called after the SimState was created by reading from a checkpointed object.  You should
@@ -230,7 +237,7 @@ public class SimState implements java.io.Serializable
         {
         AsynchronousSteppable[] b = asynchronousRegistry();
         final int len = b.length;
-        for(int x=0;x<len;x++) b[x].resume();
+        for(int x=0;x<len;x++) b[x].resume(true);
         }
 
     /** Serializes out the SimState, and the entire simulation state (not including the graphical interfaces)
@@ -259,13 +266,19 @@ public class SimState implements java.io.Serializable
         If an exception is raised, it is printed and null is returned. */
     public SimState writeToCheckpoint(File file)
         {
+        FileOutputStream f = null;
         try {
-            FileOutputStream f = new FileOutputStream(file);
+            f = new FileOutputStream(file);
             writeToCheckpoint(f);
             f.close();
             return this;
             }
-        catch(Exception e) { e.printStackTrace(); return null; }
+        catch(Exception e) 
+            {
+            try { if (f != null) f.close(); } catch (Exception e2) { }
+            e.printStackTrace(); 
+            return null; 
+            }
         }
     
     /** Creates a SimState from checkpoint.  If an exception is raised, it is printed and null is returned. */
@@ -345,7 +358,7 @@ public class SimState implements java.io.Serializable
                 {
                 try
                     {
-                    return (SimState)(c.getConstructor(new Class[] { Long.TYPE }).newInstance(new Object[] { new Long(seed) } ));
+                    return (SimState)(c.getConstructor(new Class[] { Long.TYPE }).newInstance(new Object[] { Long.valueOf(seed) } ));
                     }
                 catch (Exception e)
                     {
@@ -363,28 +376,41 @@ public class SimState implements java.io.Serializable
         <li> Repeating a job multiple times
         </ul>
     */
-    public static void doLoop(MakesSimState generator, String[] args)
+    public static void doLoop(final MakesSimState generator, final String[] args)
         {
         // print help?
         if (keyExists("-help", args))
             {
             System.err.println(
                 "Format:           java " + generator.simulationClass().getName() + " \\\n" +
-                "                       [-help] [-repeat R] [-seed S] [-until U] [-quiet] \\\n" +
-                "                       [-for F] [-time T] [-docheckpoint D] [-checkpoint C] \n\n" +
+                "                       [-help] [-repeat R] [-parallel P] [-seed S] \\\n" +
+                "                       [-until U] [-for F] [-time T] [-docheckpoint D] \\\n" +
+                "                       [-checkpoint C] [-quiet] \n\n" +
                 "-help             Shows this message and exits.\n\n" +
-                "-repeat R         Long value > 0: Runs the job R times.  Unless overridden by a\n" +
+                "-repeat R         Long value > 0: Runs R jobs.  Unless overridden by a\n" +
                 "                  checkpoint recovery (see -checkpoint), the random seed for\n" +
                 "                  each job is the provided -seed plus the job# (starting at 0).\n" +
                 "                  Default: runs once only: job number is 0.\n\n" +
+                "-parallel P       Long value > 0: Runs P separate batches of jobs in parallel,\n" +
+                "                  each one containing R jobs (as specified by -repeat).  Each\n" +
+                "                  batch has its own independent set of checkpoint files.  Job\n" +
+                "                  numbers are 0, P, P*2, ... for the first batch, then 1, P+1,\n" +
+                "                  P*2+1, ... for the second batch, then 2, P+2, P*2+2, ... for\n" +
+                "                  the third batch, and so on.  -parallel may not be used in\n" +
+                "                  combination with -checkpoint.\n" +
+                "                  Default: one batch only (no parallelism).\n\n" +
                 "-seed S           Long value not 0: the random number generator seed, unless \n" +
                 "                  overridden by a checkpoint recovery (see -checkpoint).\n" +
                 "                  Default: the system time in milliseconds.\n\n" +
                 "-until U          Double value >= 0: the simulation must stop when the\n" +
                 "                  simulation time U has been reached or exceeded.\n" +
+                "                  If -for is also included, the simulation terminates when\n" + 
+                "                  either of them is completed.\n" + 
                 "                  Default: don't stop.\n\n" +
                 "-for N            Long value >= 0: the simulation must stop when N\n" +
-                "                  simulation steps have transpired.\n" +
+                "                  simulation steps have transpired.   If -until is also\n" +
+                "                  included, the simulation terminates when either of them is\n" + 
+                "                  completed.\n" +
                 "                  Default: don't stop.\n\n" +
                 "-time T           Long value >= 0: print a timestamp every T simulation steps.\n" +
                 "                  If 0, nothing is printed.\n" +
@@ -415,186 +441,249 @@ public class SimState implements java.io.Serializable
             System.exit(0);
             }
 
-        boolean quiet = keyExists("-quiet", args);
+        final boolean quiet = keyExists("-quiet", args);
 
         java.text.NumberFormat n = java.text.NumberFormat.getInstance();
         n.setMinimumFractionDigits(0);
         if (!quiet) System.err.println("MASON Version " + n.format(version()) + ".  For further options, try adding ' -help' at end.");
 
         // figure the checkpoint modulo
-        double until = Double.POSITIVE_INFINITY;
+        double _until = Double.POSITIVE_INFINITY;
         String until_s = argumentForKey("-until", args);
         if (until_s != null)
             try
                 {
-                until = Double.parseDouble(until_s);
-                if (until < 0.0) throw new Exception();
+                _until = Double.parseDouble(until_s);
+                if (_until < 0.0) throw new Exception();
                 }
             catch (Exception e)
                 {
                 throw new RuntimeException("Invalid 'until' value: " + until_s + ", must be a positive real value");
                 }
+        final double until = _until; // stupid Java
 
-        long seed = System.currentTimeMillis();
+        long _seed = System.currentTimeMillis();
         String seed_s = argumentForKey("-seed", args);
         if (seed_s != null)
             try
                 {
-                seed = Long.parseLong(seed_s);
-                if (seed == 0) throw new Exception();
+                _seed = Long.parseLong(seed_s);
+                if (_seed == 0) throw new Exception();
                 }
             catch (Exception e)
                 {
                 throw new RuntimeException("Invalid 'seed' value: " + seed_s + ", must be a non-zero integer, or nonexistent to seed by clock time");
                 }
+        final long seed_init = _seed;  // grrrr
         
-        long _for = -1;
-        String _for_s = argumentForKey("-for", args);
-        if (_for_s != null)
+        long __for = -1;
+        String for_s = argumentForKey("-for", args);
+        if (for_s != null)
             try
                 {
-                _for = Long.parseLong(_for_s);
-                if (_for < 0) throw new Exception();
+                __for = Long.parseLong(for_s);
+                if (__for < 0) throw new Exception();
                 }
             catch (Exception e)
                 {
-                throw new RuntimeException("Invalid 'for' value: " + _for_s + ", must be an integer >= 0");
+                throw new RuntimeException("Invalid 'for' value: " + for_s + ", must be an integer >= 0");
                 }
+        final long _for = __for;  // argh
         
-        long time = -1;
+        long _time = -1;
         String time_s = argumentForKey("-time", args);
         if (time_s != null)
             try
                 {
-                time = Long.parseLong(time_s);
-                if (time < 0) throw new Exception();
+                _time = Long.parseLong(time_s);
+                if (_time < 0) throw new Exception();
                 }
             catch (Exception e)
                 {
                 throw new RuntimeException("Invalid 'time' value: " + time_s + ", must be a positive integer");
                 }
+        final long time_init = _time;  //blah
         
-        long cmod = 0;
+        long _cmod = 0;
         String cmod_s = argumentForKey("-docheckpoint", args);
         if (cmod_s != null)
             try
                 {
-                cmod = Long.parseLong(cmod_s);
-                if (cmod <= 0) throw new Exception();
+                _cmod = Long.parseLong(cmod_s);
+                if (_cmod <= 0) throw new Exception();
                 }
             catch (Exception e)
                 {
                 throw new RuntimeException("Invalid checkpoint modulo: " + cmod_s + ", must be a positive integer");
                 }
+        final long cmod = _cmod;
         
-        long repeat = 1;
+        long _repeat = 1;
         String repeat_s = argumentForKey("-repeat", args);
         if (repeat_s != null)
             try
                 {
-                repeat = Long.parseLong(repeat_s);
-                if (repeat <= 0) throw new Exception();
+                _repeat = Long.parseLong(repeat_s);
+                if (_repeat <= 0) throw new Exception();
                 }
             catch (Exception e)
                 {
-                throw new RuntimeException("Invalid repeat value: " + repeat + ", must be a positive integer");
+                throw new RuntimeException("Invalid repeat value: " + repeat_s + ", must be a positive integer");
                 }
+        final long repeat = _repeat;
+       
+        int _parallel = 1;
+        String parallel_s = argumentForKey("-parallel", args);
+        if (parallel_s != null)
+            try
+                {
+                _parallel = Integer.parseInt(parallel_s);
+                if (_parallel <= 0) throw new Exception();
+                }
+            catch (Exception e)
+                {
+                throw new RuntimeException("Invalid parallel value: " + parallel_s + ", must be a positive integer");
+                }
+        final int parallel = _parallel;
+                
+        // check for parallelism with checkpoints
+        final String checkpointFile = argumentForKey("-checkpoint", args);
+        if (parallel > 1 && checkpointFile != null)
+            {
+            System.err.println("Cannot load from checkpoint and run in parallel at the same time.  Sorry.");
+            System.exit(1);
+            }
        
        
         // okay, now we actually get down to brass tacks
         
-        long job = 0;
-        for(long rep = 0 ; rep < repeat; rep++)
-            {
-            SimState state = null;
+        // Note that this is kind of a mess -- we create a new thread even if we have
+        // a single thread to run.  Furthermore, note that we load from checkpoint the
+        // initial job within a thread.  This will likely change the job number, which
+        // could conflict with other job numbers in other threads, so this is only permitted
+        // if there is a SINGLE thread.  We already checked for that situation above.
         
-            // start from checkpoint?
-            String checkpointFile = argumentForKey("-checkpoint", args);
-            if (rep == 0 && checkpointFile!=null)  // only job 0 loads from checkpoint
+        Thread[] threads = new Thread[parallel];
+        for(int _thread = 0; _thread < parallel; _thread++)
+            {
+            final int thread = _thread;  // stupid Java
+            threads[thread] = new Thread(new Runnable()
                 {
-                if (!quiet) System.err.println("Loading from checkpoint " + checkpointFile);
-                state = SimState.readFromCheckpoint(new File(checkpointFile));
-                if (state == null)   // there was an error -- it got printed out to the screen, so just quit
-                    System.exit(1);
-                else if (state.getClass() != generator.simulationClass())  // uh oh, wrong simulation stored in the file!
+                public void run()
                     {
-                    System.err.println("Checkpoint contains some other simulation: " + state + ", should have been of class " + generator.simulationClass());
-                    System.exit(1);
-                    }
-                                        
-                state.nameThread();
-
-                job = state.job();
-                if (state.seed() != 0) // likely good seed from the command line earlier
-                    {
-                    seed = state.seed();
-                    if (!quiet) System.err.println("Recovered job: " + state.job() + " Seed: " + state.seed());
-                    }
-                else if (!quiet) System.err.println("Renamed job: " + state.job() + " (unknown seed)");
-                }
-
-            // ...or should we start fresh?
-            if (state==null)  // no checkpoint file requested
-                {
-                state = generator.newInstance(seed,args);
-                state.nameThread();
-                state.job = job;
-                state.seed = seed;
-                if (!quiet) System.err.println("Job: " + state.job() + " Seed: " + state.seed());
-                if (!quiet) System.err.println("Starting " + state.getClass().getName());
-                state.start();
-                }
-            
-            job++;
-            seed++;
-                        
-            NumberFormat rateFormat = NumberFormat.getInstance();
-            rateFormat.setMaximumFractionDigits(5);
-            rateFormat.setMinimumIntegerDigits(1);
-
-            // do the loop
-            boolean retval = false;
-            long steps = 0;
-            long clock;
-            long oldClock = System.currentTimeMillis();
-            Schedule schedule = state.schedule;
-            long firstSteps = schedule.getSteps();
-            
-            while((_for == -1 || steps < _for) && schedule.getTime() <= until)
-                {
-                if (!schedule.step(state)) 
-                    {
-                    retval=true; 
-                    break;
-                    }
-                steps = schedule.getSteps();
-                if (time < 0)  // don't know how long to make the time yet
-                    {
-                    if (System.currentTimeMillis() - oldClock > 1000L)  // time to set the time
+                    long time = time_init - 1;
+                    long job = thread * repeat;
+                    long seed = seed_init + job;  // initially anyway
+                    for(long rep = 0 ; rep < repeat; rep++)
                         {
-                        time = figureTime(steps - firstSteps);
+                        SimState state = null;
+                
+                        // start from checkpoint?  Note this will only happen if there is only ONE thread, so it's okay to change the job number here
+                        if (rep == 0 && checkpointFile!=null)  // only job 0 loads from checkpoint
+                            {
+                            if (!quiet) printlnSynchronized("Loading from checkpoint " + checkpointFile);
+                            state = SimState.readFromCheckpoint(new File(checkpointFile));
+                            if (state == null)   // there was an error -- it got printed out to the screen, so just quit
+                                System.exit(1);
+                            else if (state.getClass() != generator.simulationClass())  // uh oh, wrong simulation stored in the file!
+                                {
+                                printlnSynchronized("Checkpoint contains some other simulation: " + state + ", should have been of class " + generator.simulationClass());
+                                System.exit(1);
+                                }
+                                                                                
+                            state.nameThread();
+
+                            job = state.job();
+                            if (state.seed() != 0) // likely good seed from the command line earlier
+                                {
+                                seed = state.seed();
+                                if (!quiet) printlnSynchronized("Recovered job: " + state.job() + " Seed: " + state.seed());
+                                }
+                            else if (!quiet) printlnSynchronized("Renamed job: " + state.job() + " (unknown seed)");
+                            }
+
+                        // ...or should we start fresh?
+                        if (state==null)  // no checkpoint file requested
+                            {
+                            state = generator.newInstance(seed,args);
+                            state.nameThread();
+                            state.job = job;
+                            state.seed = seed;
+                            if (!quiet) printlnSynchronized("Job: " + state.job() + " Seed: " + state.seed());
+                            state.start();
+                            }
+                        
+                        NumberFormat rateFormat = NumberFormat.getInstance();
+                        rateFormat.setMaximumFractionDigits(5);
+                        rateFormat.setMinimumIntegerDigits(1);
+
+                        // do the loop
+                        boolean retval = false;
+                        long steps = 0;
+                        long clock;
+                        long oldClock = System.currentTimeMillis();
+                        Schedule schedule = state.schedule;
+                        long firstSteps = schedule.getSteps();
+                        
+                        while((_for == -1 || steps < _for) && schedule.getTime() <= until)
+                            {
+                            if (!schedule.step(state)) 
+                                {
+                                retval=true; 
+                                break;
+                                }
+                            steps = schedule.getSteps();
+                            if (time < 0)  // don't know how long to make the time yet
+                                {
+                                if (System.currentTimeMillis() - oldClock > 1000L)  // time to set the time
+                                    {
+                                    time = figureTime(steps - firstSteps);
+                                    }
+                                }
+                            if (time > 0 && steps % time == 0)
+                                {
+                                clock = System.currentTimeMillis();
+                                if (!quiet) printlnSynchronized("Job " + job + ": " + "Steps: " + steps + " Time: " + state.schedule.getTimestamp("At Start", "Done") + " Rate: " + rateFormat.format((1000.0 *(steps - firstSteps)) / (clock - oldClock)));
+                                firstSteps = steps;
+                                oldClock = clock;
+                                }
+                            if (cmod > 0 && steps % cmod == 0)
+                                {
+                                String s = "" + steps + "." + state.job() +  "." + state.getClass().getName().substring(state.getClass().getName().lastIndexOf(".") + 1) + ".checkpoint";
+                                if (!quiet) printlnSynchronized("Job " + job + ": " + "Checkpointing to file: " + s);
+                                state.writeToCheckpoint(new File(s));
+                                }
+                            }
+                                
+                        state.finish();
+                        
+                        if (retval) 
+                            {
+                            if (!quiet) printlnSynchronized("Job " + job + ": " + "Exhausted " + state.job );
+                            }
+                        else
+                            {
+                            if (!quiet) printlnSynchronized("Job " + job + ": " + "Quit " + state.job);
+                            }
+
+                        job++;
+                        seed++;
                         }
                     }
-                if (time > 0 && steps % time == 0)
-                    {
-                    clock = System.currentTimeMillis();
-                    if (!quiet) System.err.println("Steps: " + steps + " Time: " + state.schedule.getTimestamp("At Start", "Done") + " Rate: " + rateFormat.format((1000.0 *(steps - firstSteps)) / (clock - oldClock)));
-                    firstSteps = steps;
-                    oldClock = clock;
-                    }
-                if (cmod > 0 && steps % cmod == 0)
-                    {
-                    String s = "" + steps + "." + state.job() +  "." + state.getClass().getName().substring(state.getClass().getName().lastIndexOf(".") + 1) + ".checkpoint";
-                    if (!quiet) System.err.println("Checkpointing to file: " + s);
-                    state.writeToCheckpoint(new File(s));
-                    }
-                }
-                
-            state.finish();
-            
-            if (retval) if (!quiet) System.err.println("Exhausted");
-                else if (!quiet) System.err.println("Quit");
+                });
+            threads[thread].start();
             }
+        for(int thread = 0; thread < parallel; thread++)
+            {
+            try { threads[thread].join(); } catch (InterruptedException ex) {  }  // do nothing
+            }
+        System.exit(0);
+        }
+        
+    static Object printLock = new Object[0];
+    public static void printlnSynchronized(String val)
+        {
+        synchronized(printLock) { System.err.println(val); }
         }
     
     /** Names the current thread an appropriate name given the SimState */
@@ -607,7 +696,7 @@ public class SimState implements java.io.Serializable
     /** Returns MASON's Version */
     public static double version()
         {
-        return 17.0;
+        return 18.0;
         }
     
     // compute how much time per step 
